# opengl-experiments

./: CMakeLists.txt
include/: camera.h  shader.h
include/glad/: glad.h
src/: autotools.md  glad.c  main.cpp
src/shaders/: fragment.frag  vertex.vert
